Funcionalidades de autenticação através da implementação do Spring Security adicionada