@@ -14,7 +14,7 @@
 	<name>Pharma Ease Totem</name>
 	<description>Spring boot project using Thymeleaf and Security.</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>22</java.version>
 		<springdoc.version>2.1.0</springdoc.version>
 	</properties>
 	<dependencies>
@@ -51,6 +51,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -83,9 +88,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<compilerArgs>
-						<arg>-parameters</arg>
-					</compilerArgs>
+					<compilerArgs>--enable-preview</compilerArgs>
+					<source>22</source>
+					<target>22</target>
 				</configuration>
 			</plugin>
 		</plugins>
